# json_diff

./: README.md  pyproject.toml
differ/: JsonValidator.py
differ/tests/: BaseApiTestCase.py  test_api_diff.py
differ/urls/: admin.py
differ/views/: admin.py
service/: asgi.py  settings.py  urls.py  wsgi.py
